--- a/style.css
+++ b/style.css
@@ -3,3 +3,20 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 { 
+  text-align: center;
+}
+nav{
+  text-align: center;
+}
+#featured-property{
+   text-align: center;
+}
+#details{
+  background-color: red;
+}
+#details div{
+  background-color: red;
+  float: left;
+}
+
